# fava

./: .gitignore  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  zizmor.yml
examples/: gerbils.py
src/fava/: __init__.py  _pyav_video_reader.py  _vr_process.py  config.py  utils.py  vr_async.py
tests/: generate_numbered_video.py  test_frame_buffer.py  test_video_handler.py
